kubernetes/apps/dev/airflow/app/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: airflow
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`airflow.toskbot.xyz`)
      kind: Rule
      services:
        - name: airflow-webserver
          port: airflow-ui
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: airflow
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  rules:
    - host: airflow.toskbot.xyz
